# quickmark

./: Cargo.toml  README.md
scripts/: plot.py
src/: batch.rs  fills.rs  main.rs  markouts.rs  prices.rs  types.rs
